--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,48 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+.DS_Store
+target
+*.iml
+.idea
+!.idea/runConfigurations
+.settings
+.project
+.classpath
+.vscode/
+*~
+local-test
+out
+lib
+bin
+!devtools/cli/distribution/java-binary/bin
+dependency-reduced-pom.xml
+derby.log
+hotspot.log
+.directory
+.java-version
+.graal-install
+hs_err_pid*.log
+dumps
+*.orig
+*.rej
+.factorypath
+graph-output.dot
+*.swp
+*.swo
+ObjectStore
+.gradle
+docker/distroless/bazel-*
+/.apt_generated_tests/
+quarkus.log
+quarkus.log*
+replay_*.logß
+nbactions.xml
+nb-configuration.xml
+.cache
+/lsp/
+.sdkmanrc
+.envrc
+.jekyll-cache
