add exercise and solution for quarkus consumer

--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 %prod.kafka.bootstrap.servers=localhost:9092
 quarkus.http.port=7981
 quarkus.http.test-port=7982
+mp.messaging.outgoing.kaf-demo-ping-json.topic=kaf-demo-ping-json-3
