--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest/pom.xml
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest/pom.xml
@@ -3,7 +3,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.acme</groupId>
-  <artifactId>quarkus-consume-call-rest</artifactId>
+  <artifactId>4.1-solution-quarkus-consume-call-rest</artifactId>
+  <name>4.1-solution-quarkus-consume-call-rest</name>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.10.1</compiler-plugin.version>
