--- a/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
+++ b/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.spoud.training</groupId>
-    <artifactId>java-avro-producer</artifactId>
+    <artifactId>6.2-exercise-java-avro-producer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>java-avro-producer</name>
+    <name>6.2-exercise-java-avro-producer</name>
     <description>a kafka producer which sends AVRO serialized messages</description>
 
     <properties>
