add a bit more logging to streams demo

--- a/kafka-demos/quarkus-streams/src/main/resources/application.properties
+++ b/kafka-demos/quarkus-streams/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.kafka-streams.default.key.serde=org.apache.kafka.common.serialization.Se
 quarkus.kafka-streams.default.value.serde=io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
 quarkus.kafka-streams.topics=weather-stations,temperature-values
 quarkus.kafka-streams.schema-registry-url=http://localhost:8081
+quarkus.log.category."io.spoud.training.ValuesGenerator".level=DEBUG
 
 # streams options
 kafka-streams.commit.interval.ms=1000
