--- a/kafka-exercises-solutions/6.2-java-avro-clients/java-avro-producer/pom.xml
+++ b/kafka-exercises-solutions/6.2-java-avro-clients/java-avro-producer/pom.xml
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <avro.version>1.11.1</avro.version>
+        <avro.version>1.11.3</avro.version>
         <confluent.version>7.3.2</confluent.version>
     </properties>
 
@@ -33,18 +33,18 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>3.4.0</version>
+            <version>7.6.0-ce</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.12</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
