--- a/kafka-demos/java-consumer-liveness/pom.xml
+++ b/kafka-demos/java-consumer-liveness/pom.xml
@@ -4,42 +4,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.spoud.training</groupId>
   <artifactId>java-consumer-liveness</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>java-consumer-liveness</name>
   <description>A misconfigured consumer group that keeps rebalancing</description>
-  <url>http://www.example.com</url>
+
+  <parent>
+    <groupId>io.spoud.training</groupId>
+    <artifactId>training-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <main.basedir>${project.parent.basedir}</main.basedir>
   </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>3.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>2.0.12</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.5.3</version>
-    </dependency>
-  </dependencies>
 
 </project>
