--- a/kafka-demos/quarkus-streams/pom.xml
+++ b/kafka-demos/quarkus-streams/pom.xml
@@ -10,6 +10,7 @@
         <groupId>io.spoud.training</groupId>
         <artifactId>training-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <properties>
