--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,7 +26,7 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
-    directory: "TODO"
+    directory: "kafka-demos/jsonschema-spring-boot-demo"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
