--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/pom.xml
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/pom.xml
@@ -4,8 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.acme</groupId>
   <artifactId>4.1-solution-quarkus-producer-from-rest</artifactId>
-  <name>4.1-solution-quarkus-producer-from-rest</name>
   <version>1.0.0-SNAPSHOT</version>
+  <name>4.1-solution-quarkus-producer-from-rest</name>
   <properties>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <maven.compiler.release>17</maven.compiler.release>
@@ -62,6 +62,16 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-test-kafka-companion</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-reactive-messaging-in-memory</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
