--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
@@ -3,3 +3,11 @@
 quarkus.http.port=7981
 quarkus.http.test-port=7982
 mp.messaging.outgoing.kaf-demo-ping-json.topic=kaf-demo-ping-json-3
+mp.messaging.outgoing.kaf-demo-ping-json.connector=smallrye-kafka
+
+# add "-Djava.util.logging.manager=org.jboss.logmanager.LogManager" to the JVM arguments
+quarkus.log.category."org.apache.kafka.clients".level=DEBUG
+quarkus.log.category."org.apache.kafka.common.utils".level=DEBUG
+quarkus.log.category."org.apache.kafka.common.metrics".level=DEBUG
+quarkus.log.category."org.apache.kafka.common.telemetry".level=DEBUG
+quarkus.log.category."io.confluent".level=DEBUG
