--- a/kafka-exercises/4.1-quarkus/quarkus-consume-call-rest/pom.xml
+++ b/kafka-exercises/4.1-quarkus/quarkus-consume-call-rest/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.acme</groupId>
   <artifactId>4.1-exercise-quarkus-consume-call-rest</artifactId>
+  <name>4.1-quarkus-consume-call-rest</name>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
@@ -55,6 +56,10 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
