--- a/kafka-exercises/4.1-quarkus/quarkus-producer-from-rest/pom.xml
+++ b/kafka-exercises/4.1-quarkus/quarkus-producer-from-rest/pom.xml
@@ -5,6 +5,7 @@
   <groupId>org.acme</groupId>
   <artifactId>4.1-exercise-quarkus-producer-from-rest</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <name>4.1-quarkus-producer-from-rest</name>
   <properties>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <maven.compiler.release>17</maven.compiler.release>
@@ -46,6 +47,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -57,6 +62,16 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-test-kafka-companion</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-reactive-messaging-in-memory</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
