auto approve and auto merge to the 'updates' branch so we can merge in bulk later

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,82 +6,102 @@
 version: 2
 updates:
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "/"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/java-batching"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/java-consumer-liveness"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/java-default-partitioning"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/quarkus-streams"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/jsonschema-spring-boot-demo"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-demos/flink/datastream"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/3.1-java-client/java-consumer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/3.1-java-client/java-producer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/4.1-quarkus/quarkus-consume-call-rest"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/4.1-quarkus/quarkus-producer-from-rest"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/6.2-java-avro-clients/java-avro-producer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises/6.2-java-avro-clients/quarkus-avro-consumer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/3.1-java-client/java-consumer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/3.1-java-client/java-producer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/6.2-java-avro-clients/java-avro-producer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "kafka-exercises-solutions/6.2-java-avro-clients/quarkus-avro-consumer"
     schedule:
       interval: "weekly"
   - package-ecosystem: "maven"
+    target-branch: "updates"
     directory: "resources/services/crappy-echo-service"
     schedule:
       interval: "weekly"
