--- a/kafka-demos/flink/datastream/pom.xml
+++ b/kafka-demos/flink/datastream/pom.xml
@@ -30,12 +30,12 @@ under the License.
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<flink.version>1.20.0</flink.version>
-		<kafka-flink.vesion>3.2.0-1.19</kafka-flink.vesion>
+		<flink.version>2.0-preview1</flink.version>
+		<kafka-flink.vesion>3.3.0-1.20</kafka-flink.vesion>
 		<target.java.version>17</target.java.version>
 		<maven.compiler.source>${target.java.version}</maven.compiler.source>
 		<maven.compiler.target>${target.java.version}</maven.compiler.target>
-		<log4j.version>2.24.0</log4j.version>
+		<log4j.version>2.24.1</log4j.version>
 		<protobuf-version>3.23.2</protobuf-version>
 	</properties>
 
