--- a/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
+++ b/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>7.8.0-ce</version>
+            <version>3.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
