fix redpanda image in tests

--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest/src/main/resources/application.properties
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest/src/main/resources/application.properties
@@ -7,3 +7,6 @@ quarkus.rest-client."org.acme.SampleRestClient".url=http://localhost:7980
 quarkus.rest-client."org.acme.SampleRestClient".scope=ApplicationScoped
 mp.messaging.incoming.kaf-demo-ping-json.consumer-rebalance-listener.name=rebalancer
 mp.messaging.incoming.kaf-demo-ping-json.topic=kaf-demo-ping-json-3
+
+# temp fix for redpanda image
+quarkus.kafka.devservices.image-name=redpandadata/redpanda
