--- a/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
+++ b/kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
@@ -11,3 +11,6 @@ quarkus.log.category."org.apache.kafka.common.utils".level=DEBUG
 quarkus.log.category."org.apache.kafka.common.metrics".level=DEBUG
 quarkus.log.category."org.apache.kafka.common.telemetry".level=DEBUG
 quarkus.log.category."io.confluent".level=DEBUG
+
+# temp fix for redpanda image
+quarkus.kafka.devservices.image-name=redpandadata/redpanda
