--- a/kafka-exercises-solutions/6.2-java-avro-clients/quarkus-avro-consumer/src/main/resources/application.properties
+++ b/kafka-exercises-solutions/6.2-java-avro-clients/quarkus-avro-consumer/src/main/resources/application.properties
@@ -8,3 +8,6 @@ mp.messaging.connector.smallrye-kafka.schema.registry.url=http://localhost:8081
 
 kafka.bootstrap.servers=localhost:9092
 quarkus.devservices.enabled=false
+
+# temp fix for redpanda image
+quarkus.kafka.devservices.image-name=redpandadata/redpanda
