--- a/kafka-exercises/4.1-quarkus/quarkus-consume-call-rest/src/main/resources/application.properties
+++ b/kafka-exercises/4.1-quarkus/quarkus-consume-call-rest/src/main/resources/application.properties
@@ -5,3 +5,6 @@ quarkus.http.test-port=7984
 # point to the `crappy echo service` running on port 7980. Make sure to start it first!
 quarkus.rest-client."org.acme.SampleRestClient".url=http://localhost:7980
 quarkus.rest-client."org.acme.SampleRestClient".scope=ApplicationScoped
+
+# temp fix for redpanda image
+quarkus.kafka.devservices.image-name=redpandadata/redpanda
