--- a/kafka-exercises/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
+++ b/kafka-exercises/4.1-quarkus/quarkus-producer-from-rest/src/main/resources/application.properties
@@ -5,3 +5,6 @@
 # set ports which are not used by other services
 quarkus.http.port=7981
 quarkus.http.test-port=7982
+
+# temp fix for redpanda image
+quarkus.kafka.devservices.image-name=redpandadata/redpanda
