--- a/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
+++ b/kafka-exercises/6.2-java-avro-clients/java-avro-producer/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <avro.version>1.12.0</avro.version>
-        <confluent.version>7.7.1</confluent.version>
+        <confluent.version>7.8.0</confluent.version>
     </properties>
 
     <dependencies>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>7.7.1-ce</version>
+            <version>3.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
