--- a/kafka-demos/flink/datastream/pom.xml
+++ b/kafka-demos/flink/datastream/pom.xml
@@ -30,7 +30,7 @@ under the License.
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<flink.version>1.20.0</flink.version>
+		<flink.version>2.0-preview1</flink.version>
 		<kafka-flink.vesion>3.4.0-1.20</kafka-flink.vesion>
 		<target.java.version>17</target.java.version>
 		<maven.compiler.source>${target.java.version}</maven.compiler.source>
@@ -126,7 +126,7 @@ under the License.
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.13.0</version>
+				<version>3.14.0</version>
 				<configuration>
 					<source>${target.java.version}</source>
 					<target>${target.java.version}</target>
