--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,22 @@
         <module>kafka-demos/quarkus-streams</module>
         <!-- resources -->
         <module>resources/services/crappy-echo-service</module>
+
+        
+        <!-- exercices -->
+<!--        <module>kafka-exercises/3.1-java-client/java-consumer</module>-->
+<!--        <module>kafka-exercises/3.1-java-client/java-producer</module>-->
+<!--        <module>kafka-exercises/4.1-quarkus/quarkus-consume-call-rest</module>-->
+<!--        <module>kafka-exercises/4.1-quarkus/quarkus-producer-from-rest</module>-->
+<!--        <module>kafka-exercises/6.2-java-avro-clients/java-avro-producer</module>-->
+<!--        <module>kafka-exercises/6.2-java-avro-clients/quarkus-avro-consumer</module>-->
+<!--         exercices-solutions -->
+        <module>kafka-exercises-solutions/3.1-java-client/java-consumer</module>
+        <module>kafka-exercises-solutions/3.1-java-client/java-producer</module>
+        <module>kafka-exercises-solutions/4.1-quarkus/quarkus-producer-from-rest</module>
+        <module>kafka-exercises-solutions/4.1-quarkus/quarkus-consume-call-rest</module>
+        <module>kafka-exercises-solutions/6.2-java-avro-clients/quarkus-avro-consumer</module>
+        <module>kafka-exercises-solutions/6.2-java-avro-clients/java-avro-producer</module>
     </modules>
     <dependencyManagement>
         <dependencies>
