--- a/kafka-exercises-solutions/3.1-java-client/java-producer/pom.xml
+++ b/kafka-exercises-solutions/3.1-java-client/java-producer/pom.xml
@@ -39,8 +39,8 @@
 
     <dependency>
       <groupId>org.testcontainers</groupId>
-      <artifactId>kafka</artifactId>
-      <version>1.21.3</version>
+      <artifactId>testcontainers-kafka</artifactId>
+      <version>2.0.2</version>
       <scope>test</scope>
     </dependency>
 
