add kafka stream to avoid imcompatibility

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>io.confluent</groupId>
