--- a/kafka-demos/quarkus-producer-avro-and-headers/pom.xml
+++ b/kafka-demos/quarkus-producer-avro-and-headers/pom.xml
@@ -7,17 +7,6 @@
     <artifactId>quarkus-producer-avro-and-headers</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>quarkus-producer-avro-and-headers</name>
-    <properties>
-        <compiler-plugin.version>3.13.0</compiler-plugin.version>
-        <maven.compiler.release>17</maven.compiler.release>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.17.3</quarkus.platform.version>
-        <skipITs>true</skipITs>
-        <surefire-plugin.version>3.5.2</surefire-plugin.version>
-    </properties>
 
     <parent>
         <groupId>io.spoud.training</groupId>
@@ -28,6 +17,10 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-messaging-kafka</artifactId>
