change confluent version comment

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <surefire-plugin.version>3.5.4</surefire-plugin.version>
         <confluent.version>8.1.0</confluent.version>
         <kafka.version>4.1.1
-        </kafka.version> <!-- this must not be a confluent version like <kafka.version>7.7.1-ce</kafka.version> -->
+        </kafka.version> <!-- this MUST BE a kafka OSS version (ex 4.x), and NOT a confluent version (ex 8.x) -->
     </properties>
     <modules>
         <!-- demos -->
